--- a/projectq/templates/account.html
+++ b/projectq/templates/account.html
@@ -170,7 +170,6 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <div class="profile-icon">👤</div>
             <h1>Ваш профиль</h1>
         </div>
 
@@ -181,7 +180,7 @@
             <div class="info-item">Email: {{ user[3] }}</div>
         </div>
 
-        <button onclick="location.href='/'">Вернуться на главную</button>
+        <button onclick="location.href='/'">На главную</button>
     </div>
 </body>
 </html>
