--- a/projectq/templates/achievement.html
+++ b/projectq/templates/achievement.html
@@ -109,7 +109,7 @@
                 {% endfor %}
             </tbody>
         </table>
-        <button onclick="location.href='/'">Обратно</button>
+        <button onclick="location.href='/'">На главную</button>
     </div>
 </body>
 </html>
