--- a/projectq/templates/create_group.html
+++ b/projectq/templates/create_group.html
@@ -243,7 +243,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>📝 Создать группу</h1>
+        <h1>Создать группу</h1>
 
         {% if error %}
             <div class="error-message">
