--- a/projectq/templates/enter.html
+++ b/projectq/templates/enter.html
@@ -275,11 +275,11 @@
 
                 <div class="buttons-container">
                     <button class="button-secondary" onclick="location.href='/'">
-                        🏠 На главную
+                        На главную
                     </button>
                 </div>
 
-                <p>Нет аккаунта? <a href="login">Создайте его.</a></p>
+                <p>Нет аккаунта? <a href="login">Создайте его</a></p>
             </div>
         </div>
     </div>
