--- a/projectq/templates/group_page.html
+++ b/projectq/templates/group_page.html
@@ -324,7 +324,7 @@
             </div>
         {% endif %}
 
-        <h2>📚 Тесты группы</h2>
+        <h2>Тесты группы</h2>
 
         {% if tests %}
             <div class="tests-grid">
