--- a/projectq/templates/Mainpage.html
+++ b/projectq/templates/Mainpage.html
@@ -380,7 +380,7 @@ if ('serviceWorker' in navigator) {
 
 let deferredPrompt;
 const installButton = document.createElement('button');
-installButton.innerHTML = '📱 Установить';
+installButton.innerHTML = 'Установить';
 installButton.className = 'install-prompt';
 installButton.onclick = installPWA;
 
