--- a/projectq/templates/groups.html
+++ b/projectq/templates/groups.html
@@ -243,7 +243,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>👥 Группы</h1>
+        <h1>Группы</h1>
         <h3>Если вы не состоите ни в одной группе, то вы можете создать группу или присоединиться по ссылке, которую вам отправит администратор группы.</h3>
 
         {% if user_groups %}
