--- a/projectq/templates/login.html
+++ b/projectq/templates/login.html
@@ -298,11 +298,11 @@
 
                     <div class="buttons-container">
                         <button class="button-secondary" onclick="location.href='/'">
-                            🏠 На главную
+                            На главную
                         </button>
                     </div>
 
-                    <p>Уже зарегистрированы? <a href="enter">Войдите в систему.</a></p>
+                    <p>Уже зарегистрированы? <a href="enter">Войдите в систему</a></p>
                 </form>
             </div>
         </div>
