--- a/projectq/templates/test.html
+++ b/projectq/templates/test.html
@@ -167,7 +167,7 @@
         {% endfor %}
         <div class="buttons-container">
             <button type="submit">Проверить</button>
-            <button type="button" onclick="location.href='/'">Обратно</button>
+            <button type="button" onclick="location.href='/'">На главную</button>
         </div>
     </form>
 
